Site main page update

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
     <li><span class="highlight">Backend:</span> <a href="https://flask.palletsprojects.com/en/2.3.x/">Flask</a> and <a href="https://www.python.org/">Python</a></li>
     <li><span class="highlight">Hosting:</span> My house</li>
 </ul>
-<p>As of this revision, this website page is currently <10kb </p>
-<p>In the future, i intend to add markdown processing on the backend side of things to streamline the blog aspect of this site.</p>
+<p>As of this revision, this website page is currently <5kb </p>
+<p>While the purpose of this site is to be simple and efficient, i do intend to add some more small visual updates overtime.</p>
 <a href="/blog" style="display: table; margin: 0 auto;">
     Check out my blog
 </a>
